# practice_aronsonsSequence

./: notes  problemDesc.txt  problemLink.txt
c_impl/: CMakeLists.txt
c_impl/src/: main.c  numberToString.c  numberToString.h
